--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <head>
   <meta charset="UTF-8">
-  <title>Angela's Portfolio</title>
+  <title>Rafeek Alas Design Space</title>
 </head>
 
 <body>
-  <h1>Angela Yu's Portfolio</h1>
-  <h2>I'm a Web Developer</h2>
+  <h1>Rafeek Alas Portfolio</h1>
+  <h2>I'm an Engineer</h2>
   <hr />
+  <img src="./assets/images/Rafeek_Alas_ID_Photo.jpg" height="200" alt="Rafeek Alas ID Photo"/>
   <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
   <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
   <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
   <hr />
+  <a href="https://rafeekalascse.wordpress.com/">Rafeek Alas Blog</a>
   <a href="./public/about.html">About Me</a>
   <a href="./public/contact.html">Contact Me</a>
 </body>
